# binaryhacks_sample

./: README.md
chapter2/hack5/: README.md  amd64_readelf.txt  arm32_readelf.txt  arm64_readelf.txt  do.sh  result.txt  stringsection.sh
chapter2/hack6/: CMakeLists.txt  README.md  do.sh  main.c
chapter2/hack6/inc/: bar.h  foo.h
chapter2/hack6/src/: bar.c  foo.c
chapter2/hack7/: README.md
chapter2/hack8/: README.md  do.sh  helloworld.c
chapter2/hack9/: README.md  do.sh  helloworld.c  result.md
